[project]
name = "truc-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "invoke>=2.2.0",
    "netifaces>=0.11.0",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "scapy>=2.6.1",
]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
